# splinter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  ORACLE.md  README.md  build.rs  scratch.ini  splinter.ini  split.ini
.claude-plugin/: marketplace.json  plugin.json
.githooks/: bump-version.py  pre-push
.github/workflows/: ci.yml  release.yml
.splinter/src/: language.splinter.md
hooks/: index-first.sh
languages/common/: Cargo.toml
languages/common/src/: lib.rs
languages/cpp/: Cargo.toml
languages/cpp/src/: lib.rs
languages/cs/: Cargo.toml
languages/cs/src/: lib.rs
languages/go/: Cargo.toml
languages/go/src/: lib.rs
languages/html/: Cargo.toml
languages/html/src/: lib.rs
languages/java/: Cargo.toml
languages/java/src/: lib.rs
languages/js/: Cargo.toml
languages/js/src/: lib.rs
languages/kt/: Cargo.toml
languages/kt/src/: lib.rs
languages/lua/: Cargo.toml
languages/odin/: Cargo.toml
languages/php/: Cargo.toml
languages/py/: Cargo.toml
languages/rb/: Cargo.toml
languages/rs/: Cargo.toml
languages/sh/: Cargo.toml
languages/sql/: Cargo.toml
languages/swift/: Cargo.toml
languages/ts/: Cargo.toml
plugins/rs/: Cargo.toml
queries/: bash.scm  c_sharp.scm  cpp.scm  go.scm  html.scm  java.scm  javascript.scm  kotlin.scm  lua.scm  odin.scm  php.scm  python.scm  ruby.scm  rust.scm  swift.scm  typescript.scm
skills/scratch/: SKILL.md
skills/splinter/: SKILL.md
skills/split/: SKILL.md
src/: engine.rs  language.rs  main.rs  mcp.rs  plugin.rs  splitter.rs  stitcher.rs  tools.rs  watcher.rs
tests/: mcp.rs
(+11 files in other folders)
