[package]
name = "scratch"
version = "0.1.4"
edition = "2021"
description = "MCP server: fn-level code index with per-file scratch memory"

[[bin]]
name = "scratch"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
notify = "8"
dirs = "6"
wasmtime = "44"
wasmtime-wasi = "44"
regex = "1"
glob = "0.3"
