[package]
name = "splinter"
version = "0.1.19"
edition = "2021"
description = "MCP server: fn-level code index with per-file splinter memory"

[[bin]]
name = "splinter"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
notify = "8"
dirs = "6"
tree-sitter = { version = "0.26", features = ["wasm"] }
ureq = "2"
regex = "1"
glob = "0.3"
grep = "0.3"
rayon = "1"
